chore(formatting): reformatted all Java files