@@ -6,8 +6,8 @@ import java.util.Arrays;
 import java.util.List;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
-import org.springframework.lang.NonNull;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.lang.NonNull;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -20,31 +20,32 @@ import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 @Configuration
 public class CorsConfig implements WebMvcConfigurer {
 
-    @Value("${echo.cors-origins}")
-    private String corsOrigins;
+  @Value("${echo.cors-origins}")
+  private String corsOrigins;
 
-    @Override
-    @SuppressWarnings("null")
-    public void addCorsMappings(@NonNull CorsRegistry registry) {
-        String[] origins = corsOrigins.split(",");
-        registry
-                .addMapping("/api/**")
-                .allowedOrigins(origins)
-                .allowedMethods("GET", "POST", "OPTIONS")
-                .allowedHeaders("*")
-                .maxAge(3600);
-    }
+  @Override
+  @SuppressWarnings("null")
+  public void addCorsMappings(@NonNull CorsRegistry registry) {
+    String[] origins = corsOrigins.split(",");
+    registry
+      .addMapping("/api/**")
+      .allowedOrigins(origins)
+      .allowedMethods("GET", "POST", "OPTIONS")
+      .allowedHeaders("*")
+      .maxAge(3600);
+  }
 
-    @Bean
-    public CorsConfigurationSource corsConfigurationSource() {
-        CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(corsOrigins.split(",")));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "OPTIONS"));
-        configuration.setAllowedHeaders(List.of("*"));
-        configuration.setMaxAge(3600L);
+  @Bean
+  public CorsConfigurationSource corsConfigurationSource() {
+    CorsConfiguration configuration = new CorsConfiguration();
+    configuration.setAllowedOrigins(Arrays.asList(corsOrigins.split(",")));
+    configuration.setAllowedMethods(Arrays.asList("GET", "POST", "OPTIONS"));
+    configuration.setAllowedHeaders(List.of("*"));
+    configuration.setMaxAge(3600L);
 
-        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-        source.registerCorsConfiguration("/api/**", configuration);
-        return source;
-    }
+    UrlBasedCorsConfigurationSource source =
+      new UrlBasedCorsConfigurationSource();
+    source.registerCorsConfiguration("/api/**", configuration);
+    return source;
+  }
 }
